# calm_io

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE.txt  README.md
examples/: bad_yes.rs  good_yes.rs  yeah.rs
filters/: Cargo.toml  Justfile  README.md
filters/src/: lib.rs
pipefail/: Cargo.toml
pipefail/src/: lib.rs
src/: lib.rs
tests/: pipefail.rs
