[package]
name = "pipefail"
version = "0.1.0"
authors = ["myrrlyn <self@myrrlyn.dev>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"

[dependencies.syn]
version = "1"
features = [
    "full",
]
